<resources>
    <string name="placeholder" translatable="false">Placeholder</string>

    <string name="app_name">Recruits</string>
    <string name="action_add">Add</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_decline">Decline</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>

    <!-- Strings related to login/out -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_out">Sign out</string>
    <string name="msg_not_verified">Your account has not been verified yet.</string>
    <string name="title_not_verified">Not verified</string>
    <string name="action_exit_app">Exit app</string>
    <string name="action_choose_account">Change account</string>

    <!-- Strings related to profile -->
    <string name="profile_manage">Manage</string>
    <string name="profile_title">Profile</string>
    <string name="profile_image">Profile picture</string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_description">About me</string>
    <string name="profile_description_edit">Tell us about yourself</string>
    <string name="profile_action_save">Save</string>

    <!-- Admin strings -->
    <string name="profile_verifications">Recruit account verifications</string>
    <string name="profile_verifications_title">Account verifications</string>
    <string name="admin_title">Admin</string>

    <!-- Strings related to recruits -->
    <string name="recruit_name">Recruit name</string>
    <string name="recruit_selection_invalid">Please select a recruit</string>
    <string name="recruit_invitations">Invitations</string>
    <string name="recruit_deleted_from_group">You have been removed from this group</string>

    <!-- Strings related to groups -->
    <string name="groups_user_groups">My groups</string>
    <string name="groups_all_groups">All groups</string>
    <string name="groups_add">New group</string>
    <string name="group_name">Group name</string>
    <string name="group_location">Group location</string>
    <string name="group_add">Add</string>
    <string name="group_detail_tab">Group details</string>
    <string name="group_chat_tab">Chat</string>
    <string name="group_members">Members</string>
    <string name="group_add_title">Add group</string>
    <string name="group_city">City</string>
    <string name="group_add_member_title">Add group member</string>
    <string name="group_add_member_already_member">This recruit is already in the group.</string>
    <string name="group_member_added">Recruit added to group</string>
    <string name="group_member_invited">Recruit invited to group</string>
    <string name="group_member_already_invited">Recruit already invited to group</string>
    <string name="group_member_role_leader">Leader</string>
    <string name="group_member_role_member">Member</string>
    <string name="group_member_invitation_pending">Pending</string>
    <string name="group_member_invitation_accepted">Invitation accepted</string>
    <string name="group_member_invitation_declined">Invitation declined</string>
    <string name="group_member_invitation_title">Group invitations</string>
    <string name="group_member_invitation_message">You have been invited to join</string>
    <string name="group_member_leave_group_title">Leave group</string>
    <string name="group_member_leave_group_message">Are you sure you want to leave %1$s?</string>
    <string name="group_member_leave_group_succesful">Successfully left group</string>
    <string name="group_member_leave_group_failure">There was a problem leaving %1$s</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1627493943938849</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1627493943938849</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main" translatable="false">Recruits</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_restart_required">A restart is required to implement this change.</string>

    <!-- Data persistence settings -->
    <string name="pref_data_persistence_key">key_data_persistence</string>
    <string name="pref_data_persistence_summary">Keep a copy of data offline</string>
    <string name="pref_data_persistence_title">Data persistence</string>

    <string name="group_delete_title">Delete group</string>
    <string name="group_delete_message">Are you sure you want to delete %1$s? You will NOT be able to recover it.</string>
    <string name="group_delete_success">Group deleted</string>
    <string name="group_delete_failure">Error while deleting group. Try again or contact a developer</string>
    <string name="group_inactive_title">INACTIVE</string>
    <string name="group_inactivate_title">Inactivate group</string>
    <string name="group_inactivate_success">Inactivated group</string>
    <string name="group_inactivate_failure">Error inactivating group</string>
    <string name="group_inactivate_message">Are you sure you want to inactivate %1$s?</string>
    <string name="group_reactivate_title">Reactivate</string>
    <string name="group_reactivate_success">Reactivated group</string>
    <string name="group_reactivate_failure">Error reactivating group</string>
    <string name="group_reactivate_message">Are you sure you want to reactivate %1$s?</string>

</resources>
