<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jvdm.recruits.Activities.GroupDetailActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_leave_group"
        android:orderInCategory="200"
        android:title="@string/group_member_leave_group_title"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_inactivate_group"
        android:orderInCategory="300"
        android:title="@string/group_inactivate_title"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reactivate_group"
        android:orderInCategory="300"
        android:title="@string/group_reactivate_title"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_group"
        android:orderInCategory="400"
        android:title="@string/group_delete_title"
        android:visible="false"
        app:showAsAction="never" />

</menu>
