<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jvdm.recruits.Activities.ProfileEditActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/profile_image"
        app:srcCompat="@drawable/ic_person_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/text_recruit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/text_recruit_email"
        app:layout_constraintStart_toStartOf="@+id/text_recruit_email"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_recruit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_description"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_recruit_name"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/text_profile_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/image_profile"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/edit_profile_description"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/profile_description_edit"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/btn_profile_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_description"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/btn_profile_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/profile_action_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:onClick="btnSaveClick"/>


</android.support.constraint.ConstraintLayout>
